--- a/.gitignore
+++ b/.gitignore
@@ -191,4 +191,6 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.gitignore.io/api/git,linux,macos,python,windowsData/50x/
+# End of https://www.gitignore.io/api/git,linux,macos,python,windows
+
+Data/50x/
